Fixed navbar issue on smaller devices

--- a/Allen-Zhang/src/components/1-NavComponents/Navbar.css
+++ b/Allen-Zhang/src/components/1-NavComponents/Navbar.css
@@ -58,6 +58,7 @@
   }
 
   .nav.active {
+    display: none;
     top: 0;
   }
 
